# StudentService

./: .env  Cargo.toml  Dockerfile  student.db
migration/: Cargo.toml  create_enrolement_table_backup.sql
migration/src/: lib.rs  m20220101_000001_create_course.rs  m20220101_000001_create_student.rs  m20220101_000002_create_enrolement.rs
src/: config.rs  finance_client.rs  finance_trait.rs  integration_tests.rs  library_client.rs  main.rs  reqwest_finance_client.rs  view.rs
src/entity/: course.rs  enrolement.rs  mod.rs  prelude.rs  student.rs
static/: CourseForm.html  CourseSuccess.html  EnrollmentSuccess.html  RegisterStudent.html  RegisterSuccess.html  index.html
templates/: CourseList.html  Courses.html  EnrollForm.html  Error.html  Student.html  StudentList.html
