[package]
name = "StudentService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version = "^0.11.0", features = ["runtime-actix-native-tls", "sqlx-sqlite", "macros"]}
actix-web = {version = "^4"}
actix-files = {version = "^0.6.1"}
reqwest = {version = "0.11.14", features = ["json"]}
serde = "^1.0.153"
askama = "^0.11.1"
serde_json = {verion = "^1.0.94"}
chrono = "^0.4.24"